--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -50,7 +50,7 @@ $container.imagesLoaded(function(){
 
 <div id="breadcrumbs">
 	<% @page.ancestors.each do |page| %>
-	<%= link_to page.name , page %> &gt;
+	<b><%= link_to page.name , page %></b> &gt;
 	<% end %>
 </div>
 <p id="notice"><%= notice %></p>
@@ -77,8 +77,8 @@ $container.imagesLoaded(function(){
 <%= simple_format @page.content %>
 <% end %>
 
-<p>
+<!--p>
 <%= link_to 'Edit', edit_page_path(@page) %> |
 <%= link_to 'Show', @page %> |
 <%= link_to 'Back', pages_path %>
-</p>
+</p-->
