--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -33,7 +33,7 @@ $container.imagesLoaded(function(){
 });
 </script>
 
-<% content_for :title, @page.name %>
+<% content_for :title, Page.all.count==0 ? "Nothing yet" : @page.name %>
 <ul id="menu">
 <% Page.roots.each do |page| %>
 <% if page.icon.nil? %>
@@ -45,18 +45,35 @@ $container.imagesLoaded(function(){
 	<% end%>
 </ul>
 <!--div id="submenu">
+<% if Page.all.count > 0 %>
 <%= render 'submenu_pages', pages: @page.root.descendants.arrange %>
+<% end %>
 </div-->
 
 <div id="breadcrumbs">
-	<% @page.ancestors.each do |page| %>
-	<b><%= link_to page.name , page %></b> &gt;
+	<% if Page.all.count > 0 %>
+		<% @page.ancestors.each do |page| %>
+			<b><%= link_to page.name , page %></b> &gt;
+		<% end %>
 	<% end %>
 </div>
 <p id="notice"><%= notice %></p>
 
-<h1>  <%= @page.name %> </h1>
-
+<h1>  
+	<% if Page.all.count != 0 %>
+		<%= @page.name %> 
+	<%else%>
+	<div id="container">
+	<p>
+	Oye you have an empty database! Contact your admin or </p>
+	<p> 
+	<%= link_to (image_tag 'build-icon.png', :size =>"40x40"), pages_path %> <b>Build It Yourself! </b> 
+	</p>
+</div>
+	<%end%>
+</h1>
+		
+<% if Page.all.count != 0%>
 <% if @page.children.count > 0 %>
 <b>There are children found <%= @page.children.count%> </b>
 <div id="container">
@@ -76,9 +93,12 @@ $container.imagesLoaded(function(){
 <b>Not mappable, not searchable just print the content </b>
 <%= simple_format @page.content %>
 <% end %>
+<% end %>
 
 <!--p>
+<% if Page.all.count > 0 %>
 <%= link_to 'Edit', edit_page_path(@page) %> |
 <%= link_to 'Show', @page %> |
 <%= link_to 'Back', pages_path %>
-</p-->
+<% end %>
+</p -->
