--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title><%= content_for?(:title)? yield(:title): "C247"%></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= google_maps_api %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  
+
   <%= csrf_meta_tags %>
 </head>
 <body>
