keyword for fix

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -39,6 +39,10 @@
       <%= f.check_box :searchable %>
   	</div>
     <div class="field">
+      <%= f.label :searchType %><br>
+      <%= f.text_field :searchType%>
+  	</div>
+    <div class="field">
       <%= f.label :keywords %><br>
       <%= f.text_field :keywords%>
   	</div>
