--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -57,7 +57,8 @@ $container.imagesLoaded(function(){
 	  }
   });
 });
-
+</script>
+<style>
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -91,7 +92,51 @@ body {
   border: 1px solid #333;
   margin-bottom: 20px;
 }
-</script>
+
+div {
+  width: 200px;
+}
+ 
+h2 {
+  font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+ 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+ 
+li {
+  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  border-bottom: 1px solid #ccc;
+}
+ 
+li:last-child {
+  border: none;
+}
+ 
+li a {
+  text-decoration: none;
+  color: #000;x
+  display: block;
+  width: 200px;
+ 
+  -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
+  -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
+  -o-transition: font-size 0.3s ease, background-color 0.3s ease;
+  -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
+  transition: font-size 0.3s ease, background-color 0.3s ease;
+}
+ 
+li a:hover {
+  font-size: 30px;
+  
+}
+ 
+</style>
 
 <% content_for :title, Page.all.count==0 ? "Nothing yet" : "C247" %>
 <% if Page.all.count > 0%>
@@ -106,9 +151,9 @@ body {
 	
 <% else %>
 <% if @page != nil%>
-	<li> <%= link_to  (image_tag "icons/#{page.icon.split('/').last}", :size =>"120x40"), page, class: ("active" if @page.root==page) %></li>
+	<li> <%= link_to  (image_tag "icons/#{page.icon.split('/').last}"), page, class: ("active" if @page.root==page) %></li>
 	<% else %>
-	<li> <%= link_to (image_tag "icons/#{page.icon.split('/').last}", :size =>"120x40"), page %></li>
+	<li> <%= link_to (image_tag "icons/#{page.icon.split('/').last}"), page %></li>
 	<%end%>
 	<% end %>
 	<% end%>
@@ -143,7 +188,7 @@ body {
 	<p>
 	Oye you have an empty database! Contact your admin or </p>
 	<p> 
-	<%= link_to (image_tag 'build-icon.png', :size =>"220x2200"), pages_path %> <b>Build It Yourself! </b> 
+	<%= link_to (image_tag 'build-icon.png'), pages_path %> <b>Build It Yourself! </b> 
 	</p>
 </div>
 	<%end%>
@@ -158,7 +203,7 @@ body {
 <% if pchild.icon.nil? %>
 <div class="item"> <%= link_to pchild.name, pchild, class: ("active" if pchild.root==pchild) %></div>
 <%else%>
-<div class="item"><%= link_to (image_tag "icons/#{pchild.icon.split('/').last}", :size =>"220x220") ,pchild %></div>
+<div class="item"><%= link_to (image_tag "icons/#{pchild.icon.split('/').last}") ,pchild %></div>
 <%end%>
 <% end %>
 </div>
@@ -204,13 +249,17 @@ body {
 	<%x=64%>
 	<%reds.each do |red|%>
 	<%x=x+1%>
-	<li><b><%=x.chr%></b> <%= red["name"]%><br><%=red["vicinity"]%>
+	<div>
+	<ul>
+	
+	<li>
+	<li><a href="#"><p3><%=x.chr%></b> <%= red["name"]%><br><%=red["vicinity"]%>
 		<%price=red["price_level"].to_i%>
 		<%rating=red["rating"].to_i%>
-		|<%=price%>$|<%=rating%>stars|
-	</li>
+		|<%=price%>$|<%=rating%>stars| </p3>
+	</a></li>
 	<%end%>
-	
+</ul></div>
 </td></tr></table>
 
 <% else %>
