--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -198,12 +198,12 @@ li a:hover {
 <% if @page != nil%>
 <% if @page.children.count > 0 %>
 <b>There are children found <%= @page.children.count%> </b>
-<div id="container">
+<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
 <% @page.children.each do |pchild|%>
 <% if pchild.icon.nil? %>
-<div class="item"> <%= link_to pchild.name, pchild, class: ("active" if pchild.root==pchild) %></div>
+<li> <%= link_to pchild.name, pchild, class: ("active" if pchild.root==pchild) %></li>
 <%else%>
-<div class="item"><%= link_to (image_tag "icons/#{pchild.icon.split('/').last}") ,pchild %></div>
+<li><%= link_to (image_tag "icons/#{pchild.icon.split('/').last}") ,pchild %></li>
 <%end%>
 <% end %>
 </div>
