--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -58,85 +58,7 @@ $container.imagesLoaded(function(){
   });
 });
 </script>
-<style>
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
 
-body { 
-  
-  margin: 0;
-  font-family: sans-serif;
-  padding: 20px;
-}
-
-.masonry {
-  background: #ff0000;
-}
-
-.masonry .leftItem {
-  width:  20%;
-  height: 20px;
-  float: left;
-  background: #eeeeee;
-  border: 1px solid #333;
-  margin-bottom: 2px;
-}
-.masonry .rightItem{
-  width:  80%;
-  height: 200px;
-  float: right;
-  background: #aaaaa;
-  border: 1px solid #333;
-  margin-bottom: 20px;
-}
-
-div {
-  width: 200px;
-}
- 
-h2 {
-  font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
-  margin: 0;
-  padding: 0;
-}
- 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
- 
-li {
-  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-  border-bottom: 1px solid #ccc;
-}
- 
-li:last-child {
-  border: none;
-}
- 
-li a {
-  text-decoration: none;
-  color: #000;x
-  display: block;
-  width: 200px;
- 
-  -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -o-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
-  transition: font-size 0.3s ease, background-color 0.3s ease;
-}
- 
-li a:hover {
-  font-size: 30px;
-  
-}
- 
-</style>
 
 <% content_for :title, Page.all.count==0 ? "Nothing yet" : "C247" %>
 <% if Page.all.count > 0%>
@@ -198,7 +120,7 @@ li a:hover {
 <% if @page != nil%>
 <% if @page.children.count > 0 %>
 <b>There are children found <%= @page.children.count%> </b>
-<ul class="large-block-grid-4">
+<ul class="small-block-grid-4">
 <% @page.children.each do |pchild|%>
 <% if pchild.icon.nil? %>
 <li> <%= link_to pchild.name, pchild, class: ("active" if pchild.root==pchild) %></li>
