--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -120,7 +120,7 @@ $container.imagesLoaded(function(){
 <% if @page != nil%>
 <% if @page.children.count > 0 %>
 <b>There are children found <%= @page.children.count%> </b>
-<ul class="small-block-grid-4">
+<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
 <% @page.children.each do |pchild|%>
 <% if pchild.icon.nil? %>
 <li> <%= link_to pchild.name, pchild, class: ("active" if pchild.root==pchild) %></li>
