--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -29,7 +29,11 @@
   <div class="field">
     <%= f.label :icon %><br>
     <%= f.select :icon, @images %>
-	</div>
+ </div>
+ <div class="field">
+   <%= f.label :sec_icon %><br>
+   <%= f.select :sec_icon, @images %>
+</div>
     <div class="field">
       <%= f.label :mappable %><br>
       <%= f.check_box :mappable %>
