--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1255,12 +1255,12 @@ $default-float: left;
 
 // Background color for the top bar
 
-// $topbar-bg-color: #111;
+ $topbar-bg-color: #F2F2F2;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
 
-// $topbar-height: 45px;
+ $topbar-height: 64px;
 // $topbar-margin-bottom: 0;
 
 // Control Input height for top bar
@@ -1274,7 +1274,7 @@ $default-float: left;
 
 // Style the top bar dropdown elements
 
-// $topbar-dropdown-bg: #222;
+$topbar-dropdown-bg: #F2F2F2;
 // $topbar-dropdown-link-color: #fff;
 // // $topbar-dropdown-link-bg: lighten($topbar-bg-color, 5%);
 // $topbar-dropdown-toggle-size: 5px;
@@ -1285,7 +1285,7 @@ $default-float: left;
 
 // $topbar-link-color: #fff;
 // $topbar-link-color-hover: #fff;
-// $topbar-link-color-active: #fff;
+//$topbar-link-color-active: #f0d;
 // $topbar-link-weight: bold;
 // $topbar-link-font-size: em-calc(13);
 // $topbar-link-hover-lightness: -30%; // Darken by 30%
@@ -1325,3 +1325,4 @@ $default-float: left;
 // $topbar-arrows: true; //Set false to remove the triangle icon from the menu item
 
 @import 'foundation';
+@import "foundation/components/tabs";
