--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -129,18 +129,95 @@
 			</td>
 		</tr>
 	</table>
+	
+	
+	
+	<% elsif @page.istransit? %>
+	<iframe src="http://v2.roadify.com/24x7/" width="80%" height="600" id="frameTransit"></iframe></div>
+	
+	
+<% elsif @page.rssable?%>
+<div class="container">
+	<div class="SubTile">
+  
+	  <% source="" %>
+  	<table class="feeds" width="30%"><thead><tr><th colspan="2">NYC Feeds </th></tr></thead><tbody>
+  <% for entry in FeedEntry.all(:limit => 30, :order => "published_at desc") %>
+    <% if source != entry.source %>
+	<% source = entry.source %>
+	<% end %>
+	<tr class="feedoverview"><td class="feedsrc"> <%= source %></td><td class="feedval" data-food="<%=entry.url %>"><%= entry.name %></td></tr>
+  <% end %>
+ </tbody> </table></div> 
+ <div id="SubTile"><iframe src="//api.jquery.com/" width="80%" height="600" id="frameDemo"></iframe></div>
+ </div>
 
 <% else %>
-
 <%= simple_format @page.content %>
 <% end %>
 <% end %>
 <% end %>
+<% if @page.nil? ==false %>
+<% ab=@page.ad_banner_id %>
+<% if ab.nil? %>
+<% aban=AdBanner.first %>
+<%else %>
+<% aban=AdBanner.find(ab) %>
+<%end%>
+<%else%>
+<% aban=AdBanner.first %>
+<%end%>
+<center>
+<div id="showcase">
+<div id="cycle2" class="cycle-slideshow"
+	data-cycle-slides="> div"
+	data-cycle-fx="fade"
+	data-cycle-carousel-visible="5"
+	data-allow-wrap="true"
+	data-cycle-center-horz="true"
+	    data-cycle-center-vert="true"
+>
+	<% aban.pages.each do |aditem| %>
+	<% filename="loops/#{aditem.loopImage.split('/').last}"%>
+		<div><%= link_to (image_tag filename),aditem %></div>
+	
+	<% end %>
+</div>
+</div>
+</center>
 
-<!--p>
-<% if Page.all.count > 0 %>
-<%= link_to 'Edit', edit_page_path(@page) %> |
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', pages_path %>
-<% end %>
-</p -->
+<script>
+function loadIframe(iframeName, url) {
+    var $iframe = $('#' + iframeName);
+    if ( $iframe.length ) {
+        $iframe.attr('src',url);   
+        return false;
+    }
+    return true;
+}
+jQuery(document).ready(function() {
+	
+	$("#frameDemo").hide();
+	
+	var tr=$('.centerframe-transit').find('tr');
+	tr.bind('click', function(event) {
+
+	    unitNo = $(this).find("td.routename").html(); 
+	    alert(unitNo);
+
+
+	});
+	var tr2=$('.feeds').find('tr');
+	tr2.bind('click', function(event) {
+
+	    td = $(this).find("td.feedval"); 
+	    unitNo=td.html();
+		console.log(unitNo);
+		
+		unibo=td.data("food");
+		console.log(unibo);
+		loadIframe("frameDemo",unibo);
+		$("#frameDemo").show();
+	});
+});
+</script>
